--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 body {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
 	color: white;
+	background-color: #040714;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
 		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
 		sans-serif;
