--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	margin: 0;
-	color: white;
+	color: #f9f9f9;
 	background-color: #040714;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-		sans-serif;
+	font-family: Avenir-Roman, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	text-decoration: none;
 }
 
 code {
